2014-03-06  James Hunt  <james.hunt@ubuntu.com>

	* lib/tests/test_libupstart.c: test_libupstart(): Another
	  init => test_init fix.

2014-03-05  James Hunt  <james.hunt@ubuntu.com>

	* doc/states.dot: Added missing security state.
	* init/control.c:
	  - control_set_env():
	    - Check permissions before anything else.
	    - Explicit check on @var rather than an assert.
	  - control_unset_env(): Explicit check on @name rather than an assert.
	  - control_get_env(): Explicit check on @name.
	  - control_reset_env(): Check permissions before anything else.
	* init/control.h: control_get_job():
	  - Pass @job_name to job_find() rather than hard-coded NULL.
	  - Handle instance being NULL when raising NIH D-Bus error.
	* init/job.c: job_find(): Handle NULL job_name.
	* init/tests/test_control.c:
	  - Typo.
	  - New functions:
	    - test_list_env().
	    - test_list_env().
	    - test_get_env().
	    - test_set_env().
	    - test_unset_env().
	    - test_reset_env().
	* init/tests/test_job.c: test_job_find(): New function.
	* scripts/init-checkconf.sh:
	  - Don't rely on D-Bus any more: spawn a Session Init instead since
	    this is simpler and allows the two major limitations to be dropped.
	* scripts/man/init-checkconf.8: Updated date and limitations section.
	* init/job_class.c: job_class_stop(): Copy env rather than
	  referencing a local variable (LP: #1222705).
	* init/tests/test_job_class.c: test_start(), test_stop(),
	  test_restart(): Check job->env, job->start_env and job->stop-env.

2014-02-04   Cameron Norman  <camerontnorman@gmail.com>

	* extra/upstart-socket-bridge.c:
	  - epoll_watcher(): Fix missing breaks in a switch, move buffer and
	                     remove its nih_local usage.
	  - job_add_socket(): added case for name_len being a AF_INET6 address.

2014-02-04  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/socket-event.7: Environment variable is
	  UPSTART_EVENTS, not UPSTART_JOB (LP: #1275308).
