@@ -505,12 +505,6 @@ _start_upstart (pid_t *pid, int user, char * const *args)
 		}
 
 		argv0 = argv[0];
-
-		/* Make the process stand out from existing non-test
-		 * Session Init processes.
-		 */
-		argv[0] = "test_init";
-
 		assert (execvp (argv0, argv) != -1);
 	}
 
